--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -7,28 +7,26 @@ img {
   height: 100px;
 }
 
+body {
+  text-align: center;
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
-  margin-bottom: 1rem;
+  margin-bottom: 32px;
 }
 
 .section-default {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 52px;
+  align-items: center;
+  justify-content: center;
 }
 
 .item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex: 1 1 200px;
-  padding: 0.5rem;
-}
-
-body {
-  text-align: center;
+  max-width: 200px;
 }
 
 /* do not edit this footer */
